INCLUDE_DIRECTORIES(
${CMAKE_SOURCE_DIR}
${CMAKE_SOURCE_DIR}/scribus
)

INSTALL(FILES
ellipsis.png
above.png
acrobat.png
acroread.png
addf.png
AddNode.png
AddPoint.png
al_bottom_in.png
al_bottom_out.png
al_center_hor.png
al_center_ver.png
alert.png
AllCaps.png
al_left_in.png
al_left_out.png
al_right_in.png
al_right_out.png
al_top_in.png
al_top_out.png
AppIcon2.png
AppIcon.png
back.png
below.png
BevelJoin.png
BezierClose.png
beziertool16.png
beziertool.png
Bild16.xpm
Bild.xpm
blend.png
bottom.png
ButtCap.png
checkdoc.png
clear_right.png
cmyk.png
colorpicker.png
colorpickercursor.png
compfile16.png
compfile.png
configure.png
Corner.xpm
crop.png
cmsOff.png
cmsOn.png
curve.png
curvebezier.png
curvelinear.png
DateiClos16.png
DateiClose.png
DateiNeu16.png
DateiNeu.xpm
DateiOpen16.png
DateiOpen.xpm
DateiPrint16.png
DateiPrint.xpm
DateiSave16.png
DateiSave2.png
Deletelayer.png
DeleteNode.png
DelPoint.png
dist22.png
dist.png
distribute_acrosspage.png
distribute_acrossmargins.png
distribute_bottom.png
distribute_hcentre.png
distribute_downpage.png
distribute_downmargins.png
distribute_hdist.png
distribute_hdist_val.png
distribute_left.png
distribute_right.png
distribute_top.png
distribute_vcentre.png
distribute_vdist.png
distribute_vdist_val.png
docattributes.png
doc.png
document2.png
documentinfo32.png
documentinfo.png
down.png
DragPix.xpm
DrawFrame.xpm
DrawFreeLine.png
DrawImageFrame.xpm
DrawPolylineFrame.xpm
DrawTable.xpm
DrawTextFrame.xpm
editcopy22.png
editcopy.png
editcut22.png
editcut.png
editdelete22.png
editdelete.png
Editm.xpm
editpaste.png
edittrash.png
exit22.png
exit.png
expand.png
externaltools.png
filenew.png
fileopen.png
filesaveas.png
fill.png
find16.png
find.png
finish.png
firstline.png
FlipH.xpm
FlipV.xpm
flow-bounding.png
flow-contour.png
flow-frame.png
flow-none.png
font_otf16.png
font_otf.png
font.png
font_truetype16.png
font_truetype.png
font_type1_16.png
font_type1.png
forward.png
framenoresize.png
frameresize.png
frame_table16.png
frame_table.png
gohome.png
goto.png
group.png
guides.png
HandC.xpm
hmirror.png
Hoch.xpm
hyphenate.png
image.png
invert.png
irreg.png
Kapital.xpm
Kern.xpm
key_bindings.png
Kreise.xpm
Kreuz.xpm
launch16.png
launch.png
Layervisible.xpm
leftindent.png
linespacing.png
linespacing2.png
listbox.png
locked.png
Lock.xpm
Lowerlayer.png
lower.png
lower-to-bottom.png
Lupe.xpm
LupeZ.xpm
LupeZm.xpm
misc.png
MiterJoin.png
MoveAsym.png
MoveKontrol.png
MoveNode.png
mover.png
MoveSym.png
Newlayer.png
nftabout.xpm
nftinfo.xpm
noicon.xpm
NoPrint.png
ok22.png
ok.png
ooo_draw.png
ooo_writer.png
outlined.png
page16.png
pagedouble16.png
pagedouble.png
page.png
pagequadro16.png
pagequadro.png
pagesingle16.png
pagesingle.png
pagetriple16.png
pagetriple.png
pdf.png
penciladd.png
pencilsub.png
plugins.png
PolyCut.png
postscript.png
pushbutton.png
printer.png
python.png
Raiselayer.png
raise.png
raise-to-top.png
Rechtecke.xpm
register.png
reload16.png
reload.png
removef.png
Reset1Node.png
ResetNode.png
Revers.png
revert.png
rgb.png
rightindent.png
rotate_ccw.png
rotate_cw.png
Rotieren2.png
Rotieren.xpm
RoundCap.png
RoundJoin.png
scrap.png
screen.png
scribusdoc16.png
scribusdoc.png
scribusicon.png
scribus_logo.png
shade.png
shadow.png
shear_down.png
shear_left.png
shear_right.png
shear_up.png
shortwords.png
signature2.png
signature.png
Spacing.xpm
spiral.png
Splash.png
spline16.png
spline.png
Split.png
spot.png
SquareCap.png
start.png
Stift16.xpm
Stiftalt16.xpm
Stiftalt.xpm
Stift.xpm
stoplaunch16.png
stoplaunch.png
Strike.xpm
tab.png
tabtocindex.png
testfill.png
Text16.xpm
Text2.xpm
textbase.png
text_block.png
text_center.png
text_force.png
textkern.png
text_left.png
text_right.png
textscaleh.png
textscalev.png
Text.xpm
Tief.xpm
tools.png
top.png
trashcan2.png
trashcan.png
triangle.png
txt.png
typography.png
u_align.png
u_arrow.png
u_create.png
u_cut.png
u_delete.png
u_disableprint.png
u_enableprint.png
u_eps.png
u_fill.png
u_fliph.png
u_flipv.png
u_font.png
u_group.png
u_line.png
u_lock.png
u_margins_locked.png
u_margins.png
u_move.png
u_multiple.png
ungroup.png
unlock.png
Unlock.xpm
Unter.xpm
up.png
u_redo16.png
u_redo.png
u_resize.png
u_rotate.png
u_scale_image.png
u_shade.png
u_shape.png
u_svg.png
u_transp.png
u_undo16.png
u_undo.png
u_unlock.png
vectorgfx.png
viewmag1.png
viewmagin.png
viewmagout.png
view.png
vmirror.png
Winkel.xpm
wizard.png
wordsOnly.png
Zeichen.xpm
vpl.png
layer-outline.png
previewOn.png
previewOff.png
  DESTINATION ${ICONDIR}
)

INSTALL(FILES
16/align-horizontal-center.png
16/align-horizontal-left-out.png
16/align-horizontal-left.png
16/align-horizontal-right-out.png
16/align-horizontal-right.png
16/align-vertical-bottom-out.png
16/align-vertical-bottom.png
16/align-vertical-center.png
16/align-vertical-top-out.png
16/align-vertical-top.png
16/close.png
16/color-fill.png
16/color-stroke.png
16/distribute-horizontal-equal.png
16/distribute-horizontal-left.png
16/distribute-horizontal-right.png
16/distribute-vertical-bottom.png
16/distribute-vertical-center.png
16/distribute-vertical-equal.png
16/distribute-vertical-top.png
16/document-new.png
16/document-open.png
16/document-print.png
16/document-properties.png
16/document-save.png
16/document-save-as.png
16/draw-arrow-back.png
16/draw-arrow-down.png
16/draw-arrow-forward.png
16/draw-arrow-up.png
16/draw-cross.png
16/draw-donut.png
16/draw-ellipse.png
16/draw-halfcircle1.png
16/draw-halfcircle2.png
16/draw-halfcircle3.png
16/draw-halfcircle4.png
16/draw-path.png
16/draw-polygon.png
16/draw-rectangle.png
16/draw-square-inverted-corners.png
16/draw-star.png
16/draw-triangle1.png
16/draw-triangle2.png
16/draw-triangle3.png
16/draw-triangle4.png
16/draw-triangle.png
16/edit-copy.png
16/edit-cut.png
16/edit-find-replace.png
16/edit-paste.png
16/edit-redo.png
16/edit-undo.png
16/flip-object-horizontal.png
16/flip-object-vertical.png
16/go-bottom.png
16/go-down.png
16/go-top.png
16/go-up.png
16/insert-image.png
16/insert-text-frame.png
16/insert-table.png
16/list-add.png
16/list-remove.png
16/lock.png
16/lock-unlocked.png
16/measure.png
16/page-3fold.png
16/page-4fold.png
16/page-doublesided.png
16/page-simple.png
16/preflight-verifier.png
16/show-object.png
16/story-editor.png
16/stroke-cap-butt.png
16/stroke-cap-round.png
16/stroke-cap-square.png
16/stroke-join-bevel.png
16/stroke-join-miter.png
16/stroke-join-round.png
16/transform-rotate.png
16/zoom.png
16/zoom-in.png
16/zoom-original.png
16/zoom-out.png
16/layer-flow-around.png
  DESTINATION ${ICONDIR}16
)

INSTALL(FILES
22/align-horizontal-center.png
22/align-horizontal-left-out.png
22/align-horizontal-left.png
22/align-horizontal-right-out.png
22/align-horizontal-right.png
22/align-vertical-bottom-out.png
22/align-vertical-bottom.png
22/align-vertical-center.png
22/align-vertical-top-out.png
22/align-vertical-top.png
22/close.png
22/color-picker.png
22/checkbox.png
22/combobox.png
22/distribute-horizontal-center.png
22/distribute-horizontal-equal.png
22/distribute-horizontal-left.png
22/distribute-horizontal-right.png
22/distribute-vertical-bottom.png
22/distribute-vertical-center.png
22/distribute-vertical-equal.png
22/distribute-vertical-top.png
22/document-new.png
22/document-open.png
22/document-print.png
22/document-properties.png
22/document-save.png
22/document-save-as.png
22/draw-arrow-back.png
22/draw-arrow-down.png
22/draw-arrow-forward.png
22/draw-arrow-up.png
22/draw-cross.png
22/draw-donut.png
22/draw-ellipse.png
22/draw-freehand.png
22/draw-halfcircle1.png
22/draw-halfcircle2.png
22/draw-halfcircle3.png
22/draw-halfcircle4.png
22/draw-path.png
22/draw-polygon.png
22/draw-polyline.png
22/draw-rectangle.png
22/draw-square-inverted-corners.png
22/draw-star.png
22/draw-triangle1.png
22/draw-triangle2.png
22/draw-triangle3.png
22/draw-triangle4.png
22/draw-triangle.png
22/edit-copy.png
22/edit-cut.png
22/edit-find-replace.png
22/edit-paste.png
22/edit-redo.png
22/edit-undo.png
22/go-bottom.png
22/go-down.png
22/go-top.png
22/go-up.png
22/insert-button.png
22/insert-image.png
22/insert-text-frame.png
22/insert-table.png
22/list-box.png
22/lock.png
22/lock-unlocked.png
22/measure.png
22/pdf-annotations.png
22/pointer.png
22/preflight-verifier.png
22/story-editor.png
22/text-field.png
22/text-frame-link.png
22/text-frame-unlink.png
22/transform-rotate.png
22/zoom.png
22/zoom-in.png
22/zoom-original.png
22/zoom-out.png
  DESTINATION ${ICONDIR}22
)

INSTALL(FILES
32/page-3fold.png
32/page-4fold.png
32/page-doublesided.png
32/page-simple.png
  DESTINATION ${ICONDIR}32
)
