INCLUDE_DIRECTORIES(
${CMAKE_SOURCE_DIR}
${CMAKE_SOURCE_DIR}/scribus
)

INSTALL(FILES
ellipsis.png
above.png
acroread16.png
acroread22.png
acroread32.png
AddNode.png
AddPoint.png
alert.png
AllCaps.png
AppIcon2.png
AppIcon.png
below.png
BevelJoin.png
BezierClose.png
beziertool16.png
beziertool.png
blend.png
ButtCap.png
checkdoc.png
clear_right.png
cmyk.png
colorpicker.png
colorpickercursor.png
compfile16.png
compfile.png
configure.png
Corner.xpm
crop.png
cmsOff.png
cmsOn.png
curve.png
curvebezier.png
curvelinear.png
DeleteNode.png
DelPoint.png
dist22.png
dist.png
docattributes.png
doc.png
document2.png
documentinfo32.png
documentinfo.png
DragPix.xpm
DrawFrame.xpm
DrawFreeLine.png
DrawImageFrame.xpm
DrawPolylineFrame.xpm
DrawTable.xpm
DrawTextFrame.xpm
Editm.xpm
exit22.png
exit.png
expand.png
externaltools.png
find16.png
find.png
firstline.png
flow-bounding.png
flow-contour.png
flow-frame.png
flow-none.png
font_otf16.png
font_otf.png
font.png
font_subst16.png
font_truetype16.png
font_truetype.png
font_type1_16.png
font_type1.png
framenoresize.png
frameresize.png
goto.png
group.png
guides.png
HandC.xpm
hmirror.png
Hoch.xpm
hyphenate.png
invert.png
irreg.png
Kapital.xpm
Kern.xpm
key_bindings.png
Kreise.xpm
Kreuz.xpm
launch16.png
launch.png
leftindent.png
linespacing.png
linespacing2.png
locked.png
Lock.xpm
lower.png
lower-to-bottom.png
Lupe.xpm
LupeZ.xpm
LupeZm.xpm
misc.png
MiterJoin.png
MoveAsym.png
MoveKontrol.png
MoveNode.png
mover.png
MoveSym.png
noicon.xpm
NoPrint.png
ok22.png
ok.png
ooo_draw.png
ooo_writer.png
outlined.png
pdf.png
penciladd.png
pencilsub.png
plugins.png
PolyCut.png
postscript.png
printer.png
python.png
raise.png
raise-to-top.png
register.png
reload16.png
reload.png
Reset1Node.png
ResetNode.png
Revers.png
revert.png
rgb.png
rightindent.png
rotate_ccw.png
rotate_cw.png
Rotieren2.png
RoundCap.png
RoundJoin.png
scrap.png
screen.png
scribusdoc16.png
scribusdoc.png
scribusicon.png
scribus_logo.png
shade.png
shadow.png
shortwords.png
Spacing.xpm
spiral.png
Splash.png
spline16.png
spline.png
Split.png
spot.png
SquareCap.png
Stift16.xpm
Stift.xpm
Strike.xpm
tab.png
tabtocindex.png
testfill.png
textbase.png
textkern.png
textscaleh.png
textscalev.png
Tief.xpm
tools.png
trashcan2.png
trashcan.png
triangle.png
txt.png
typography.png
u_align.png
u_arrow.png
u_create.png
u_cut.png
u_delete.png
u_disableprint.png
u_enableprint.png
u_eps.png
u_fill.png
u_fliph.png
u_flipv.png
u_font.png
u_group.png
u_line.png
u_lock.png
u_margins_locked.png
u_margins.png
u_move.png
u_multiple.png
ungroup.png
unlock.png
Unlock.xpm
Unter.xpm
u_redo16.png
u_redo.png
u_resize.png
u_rotate.png
u_scale_image.png
u_shade.png
u_shape.png
u_svg.png
u_transp.png
u_undo16.png
u_undo.png
u_unlock.png
vectorgfx.png
viewmag1.png
viewmagin.png
viewmagout.png
view.png
vmirror.png
Winkel.xpm
wizard.png
wordsOnly.png
Zeichen.xpm
vpl.png
layer-outline.png
previewOn.png
previewOff.png
  DESTINATION ${ICONDIR}
)

INSTALL(FILES
16/align-horizontal-center.png
16/align-horizontal-left-out.png
16/align-horizontal-left.png
16/align-horizontal-right-out.png
16/align-horizontal-right.png
16/align-vertical-bottom-out.png
16/align-vertical-bottom.png
16/align-vertical-center.png
16/align-vertical-top-out.png
16/align-vertical-top.png
16/close.png
16/color-fill.png
16/color-stroke.png
16/distribute-horizontal-center.png
16/distribute-horizontal-equal.png
16/distribute-horizontal-left.png
16/distribute-horizontal-right.png
16/distribute-vertical-bottom.png
16/distribute-vertical-center.png
16/distribute-vertical-equal.png
16/distribute-vertical-top.png
16/document-new.png
16/document-open.png
16/document-print.png
16/document-print-preview.png
16/document-properties.png
16/document-save.png
16/document-save-as.png
16/draw-arrow-back.png
16/draw-arrow-down.png
16/draw-arrow-forward.png
16/draw-arrow-up.png
16/draw-bezier-curves.png
16/draw-cross.png
16/draw-donut.png
16/draw-ellipse.png
16/draw-halfcircle1.png
16/draw-halfcircle2.png
16/draw-halfcircle3.png
16/draw-halfcircle4.png
16/draw-path.png
16/draw-polygon.png
16/draw-rectangle.png
16/draw-square-inverted-corners.png
16/draw-star.png
16/draw-triangle1.png
16/draw-triangle2.png
16/draw-triangle3.png
16/draw-triangle4.png
16/draw-triangle.png
16/edit-clear.png
16/edit-copy.png
16/edit-cut.png
16/edit-delete.png
16/edit-find-replace.png
16/edit-paste.png
16/edit-redo.png
16/edit-select-all.png
16/edit-undo.png
16/flip-object-horizontal.png
16/flip-object-vertical.png
16/format-justify-center.png
16/format-justify-fill.png
16/format-justify-fill-block.png
16/format-justify-left.png
16/format-justify-right.png
16/go-bottom.png
16/go-down.png
16/go-first.png
16/go-home.png
16/go-last.png
16/go-next.png
16/go-previous.png
16/go-top.png
16/go-up.png
16/help-browser.png
16/information.png
16/image-x-generic.png
16/insert-image.png
16/insert-text-frame.png
16/insert-table.png
16/list-add.png
16/list-remove.png
16/lock.png
16/lock-unlocked.png
16/measure.png
16/page-3fold.png
16/page-4fold.png
16/page-doublesided.png
16/page-simple.png
16/preflight-verifier.png
16/show-object.png
16/story-editor.png
16/stroke-cap-butt.png
16/stroke-cap-round.png
16/stroke-cap-square.png
16/stroke-join-bevel.png
16/stroke-join-miter.png
16/stroke-join-round.png
16/transform-rotate.png
16/zoom.png
16/zoom-in.png
16/zoom-original.png
16/zoom-out.png
16/layer-flow-around.png
  DESTINATION ${ICONDIR}16
)

INSTALL(FILES
22/align-horizontal-center.png
22/align-horizontal-left-out.png
22/align-horizontal-left.png
22/align-horizontal-right-out.png
22/align-horizontal-right.png
22/align-vertical-bottom-out.png
22/align-vertical-bottom.png
22/align-vertical-center.png
22/align-vertical-top-out.png
22/align-vertical-top.png
22/close.png
22/color-picker.png
22/checkbox.png
22/combobox.png
22/distribute-horizontal-center.png
22/distribute-horizontal-equal.png
22/distribute-horizontal-left.png
22/distribute-horizontal-margin.png
22/distribute-horizontal-page.png
22/distribute-horizontal-right.png
22/distribute-horizontal-x.png
22/distribute-vertical-bottom.png
22/distribute-vertical-center.png
22/distribute-vertical-equal.png
22/distribute-vertical-margin.png
22/distribute-vertical-page.png
22/distribute-vertical-top.png
22/distribute-vertical-y.png
22/document-new.png
22/document-open.png
22/document-print.png
22/document-print-preview.png
22/document-properties.png
22/document-save.png
22/document-save-as.png
22/draw-arrow-back.png
22/draw-arrow-down.png
22/draw-arrow-forward.png
22/draw-arrow-up.png
22/draw-bezier-curves.png
22/draw-cross.png
22/draw-donut.png
22/draw-ellipse.png
22/draw-freehand.png
22/draw-halfcircle1.png
22/draw-halfcircle2.png
22/draw-halfcircle3.png
22/draw-halfcircle4.png
22/draw-path.png
22/draw-polygon.png
22/draw-polyline.png
22/draw-rectangle.png
22/draw-square-inverted-corners.png
22/draw-star.png
22/draw-triangle1.png
22/draw-triangle2.png
22/draw-triangle3.png
22/draw-triangle4.png
22/draw-triangle.png
22/edit-clear.png
22/edit-copy.png
22/edit-cut.png
22/edit-delete.png
22/edit-find-replace.png
22/edit-paste.png
22/edit-redo.png
22/edit-select-all.png
22/edit-undo.png
22/go-bottom.png
22/go-down.png
22/go-first.png
22/go-home.png
22/go-last.png
22/go-next.png
22/go-previous.png
22/go-top.png
22/go-up.png
22/image-x-generic.png
22/insert-button.png
22/insert-image.png
22/insert-text-frame.png
22/insert-table.png
22/list-add.png
22/list-box.png
22/list-remove.png
22/lock.png
22/lock-unlocked.png
22/measure.png
22/pdf-annotations.png
22/pointer.png
22/preflight-verifier.png
22/story-editor.png
22/text-field.png
22/text-frame-link.png
22/text-frame-unlink.png
22/transform-rotate.png
22/transform-shear-down.png
22/transform-shear-left.png
22/transform-shear-right.png
22/transform-shear-up.png
22/zoom.png
22/zoom-in.png
22/zoom-original.png
22/zoom-out.png
  DESTINATION ${ICONDIR}22
)

INSTALL(FILES
32/page-3fold.png
32/page-4fold.png
32/page-doublesided.png
32/page-simple.png
  DESTINATION ${ICONDIR}32
)
